# HPC-with-MPI

./: .gitignore  MyMPI.h  README.md  gaussian_elimination.c  jacobi_iteration.c  mat-vect_multip_colums.c  pi.cpp
CFD/: CMakeLists.txt  minitest  test  test.cpp
CFD/src/: blockDivide.cpp  miniCFD.cpp  util.cpp  util.h
basic_practice/: MyMPI.c  MyMPI.h  circuit_satisfiability  circuit_satisfiability.cpp  gaussian_elimination  jacobi_iteration  mat-mat_multip  mat-mat_multip.c  mat-vect_multip_colums  mat-vect_multip_colums.c  mat-vect_multip_rows  mat-vect_multip_rows.c  mpihelloworld  pi  pi_omp  pi_omp.cpp  wave_equation
basic_practice/data/: mat-vect_generator
bloom/: bloom_parallel.cpp  bloom_serial.cpp
data/: mat-vect_generator.c  vect
thermal_equation/: 2DThermal.cpp  CMakeLists.txt  iter.csv  meshdef.h  solver  solver_serial.cpp  thermal.vtk
thermal_equation/src/: 2DThermal.cpp  meshdef.h  output_vtk.cpp  solver_parallel.cpp  solver_serial.cpp
wave_equation/: sting_vibration.c  string_vibration_parallel  string_vibration_parallel.c  string_vibration_serial  string_vibration_serial.c
